--- a/Components/ContactUs/ContactUsComponent.razor
+++ b/Components/ContactUs/ContactUsComponent.razor
@@ -14,7 +14,7 @@
         <div class="info-box  mb-4">
             <i class="bx bx-envelope"></i>
             <h3>@localizer["Email"]</h3>
-            <p>nano-djems@mail.ru</p>
+            <p><a href="mailto:alkhorazmiynamangan@gmail.com">Al-KHorazmiy@gmail.com</a></p>
         </div>
     </div>
 
@@ -22,7 +22,7 @@
         <div class="info-box  mb-4">
             <i class="bx bx-phone-call"></i>
             <h3>@localizer["Phone"]</h3>
-            <p>(69) 210 00 07, (94) 303 07 07</p>
+            <p><span><a href="tel: +998692100007">(69) 210 00 07</a></span> &nbsp;&nbsp;&nbsp; <span><a href="tel: +998943030707">(94) 303 07 07</a></span></p>
         </div>
     </div>
 </div>
