--- a/Components/Footer/FooterComponent.razor
+++ b/Components/Footer/FooterComponent.razor
@@ -8,13 +8,13 @@
                 <div class="col-lg-4 col-md-6">
                     <h4>@localizer["weareinSM"]</h4>
                     <div class="social-links my-3">
-                        <a onclick="window.open('https://t.me/naminteach', '_blank')" class="telegram"><i
+                        <a onclick="window.open('https://t.me/naminteach_group', '_blank')" class="telegram"><i
                                 class="bx bxl-telegram"></i></a>
-                        <a onclick="window.open('http://instagram.com/itschool.uz', '_blank')" class="instagram"><i
+                        <a onclick="window.open('https://www.instagram.com/al_khorazmiy_namangan1/', '_blank')" class="instagram"><i
                                 class="bx bxl-instagram"></i></a>
-                        <a onclick="window.open('https://www.youtube.com/channel/UCFIGpknr9Ub1E21NsxpAL_Q', '_blank')"
+                        <a onclick="window.open('https://youtu.be/0En36L0KnS8', '_blank')"
                             class="youtube"><i class="bx bxl-youtube"></i></a>
-                        <a onclick="window.open('http://facebook.com/itschool.uz', '_blank')" class="facebook"><i
+                        <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')" class="facebook"><i
                                 class="bx bxl-facebook"></i></a>
                     </div>
                     <LanguageComponent></LanguageComponent>
@@ -37,10 +37,11 @@
                         @localizer["address-building"],<br>
                         @localizer["address-region"]<br>
                         @localizer["province"]<br>
-                        <strong>@localizer["email"]:</strong> nano-djems@mail.ru<br>
-                        <strong>@localizer["phone"]:</strong> (69) 210 00 07<br />
-                        <span class="tab">(90) 598 58 88</span><br />
-                        <span class="tab">(94) 300 00 05</span>
+                        <strong>@localizer["email"]:</strong> <a href="mailto:alkhorazmiynamangan@gmail.com">Al-KHorazmiy@gmail.com</a>
+<br>
+                        <strong>@localizer["phone"]:</strong><a href="tel:+998692100007">&nbsp;(69) 210 00 07</a>
+                        <span class="tab"><a href="tel:+998905985888">(90) 598 58 88</a></span>
+                        <span class="tab"><a href="tel:+99843000005">(94) 300 00 05</a></span>
                     </p>
                 </div>
                 <style type="text/css">
@@ -55,7 +56,11 @@
 
     <div class="container pt-3">
         <div class="credits my-auto">
-            @((MarkupString)localizer["DesignedBy"].ToString())
+            @* @((MarkupString)localizer["DesignedBy"].ToString()) *@
+             <p>
+        <span>license:№029835</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>license: №34731</span>
+       </p>
         </div>
     </div>
 </footer><!-- End Footer -->
