--- a/Components/SocialMediaLinks/SocialMediaLinksIlmHub.razor
+++ b/Components/SocialMediaLinks/SocialMediaLinksIlmHub.razor
@@ -1,9 +1,15 @@
+<li class="languuage">
+          <LanguageComponent></LanguageComponent>
+        </li>
 <div class="social-links d-none d-md-flex align-items-center">
-    <a onclick="window.open('https://t.me/ilmhubuz', '_blank')" class="telegram"><i class="bx bxl-telegram"></i></a>
-    <a onclick="window.open('http://instagram.com/ilmhubuz', '_blank')" class="instagram"><i
+    <a onclick="window.open('https://t.me/naminteach_group')" class="telegram"><i class="bx bxl-telegram"></i></a>
+    <a onclick="window.open('https://www.instagram.com/al_khorazmiy_namangan1/', '_blank')" class="instagram"><i
             class="bx bxl-instagram"></i></a>
-    <a onclick="window.open('https://www.youtube.com/c/IlmhubITTalim/featured', '_blank')" class="youtube"><i
+    <a onclick="window.open('https://youtu.be/0En36L0KnS8', '_blank')" class="youtube"><i
             class="bx bxl-youtube"></i></a>
-    <a onclick="window.open('http://www.facebook.com/profile.php?id=100078403862456', '_blank')" class="facebook"><i
+    <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')" class="facebook"><i
             class="bx bxl-facebook"></i></a>
+    @* <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')" class="facebook"><i
+            class="bx bxl-tiktok"></i></a> *@
+            
 </div>
